--- a/vueTest/index.html
+++ b/vueTest/index.html
@@ -12,6 +12,14 @@
     <style>
       body {
         margin: 0 !important;
+        font-family: sans-serif;
+        min-height: 100vh;
+        color: #2c3e50;
+        background-color: rgb(224 231 231) !important;
+        /* transition: color 0.5s, background-color 0.5s; */
+        line-height: 1.6;
+        font-size: 15px;
+        text-rendering: optimizeLegibility;
       }
     </style>
   </head>
